--- a/CategoryMouse.mediawiki
+++ b/CategoryMouse.mediawiki
@@ -8,8 +8,19 @@
 
 '''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_mouse.h SDL_mouse.h]
 
+<<Color2(green,Alternate Include File:  [http://hg.libsdl.org/SDL/file/100f7ab48946/include/SDL_input.h SDL_input.h])>>
+
 
 == Introduction ==
+
+Please note that this ONLY discusses "mice" with the notion of the desktop GUI. You (usually) have one system cursor, and the OS hides the hardware details from you. If you plug in 10 mice, all ten move that one cursor. For many applications and games this is perfect, and this API has served hundreds of SDL programs well since its birth.
+
+It's not the whole picture, though. If you want more lowlevel control, SDL offers a different API that gives you visibility into each input device, multi-touch interfaces, etc. 
+
+Those two APIs are incompatible, and you usually should not use both at the same time. But for legacy purposes, this API refers to a "mouse" when it actually means the system pointer and not a physical mouse.
+
+The other API is in [http://hg.libsdl.org/SDL/file/100f7ab48946/include/SDL_input.h SDL_input.h]
+
 
 == Functions ==
 
