update content - changeset 4465

--- a/SDL_GetKeyboardState.mediawiki
+++ b/SDL_GetKeyboardState.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_GetKeyboardState =
-Use this function to get a snapshot of the current state of the selected keyboard.
+Use this function to get a snapshot of the current state of the keyboard.
 
 
 == Syntax ==
