--- a/SDL_GetModState.mediawiki
+++ b/SDL_GetModState.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_GetModState =
-Use this function to get the current key modifier state for the ^?selected?^ keyboard.
+Use this function to get the current key modifier state for the keyboard.
 
 
 == Syntax ==
@@ -12,7 +12,7 @@ SDLMod SDL_GetModState(void)
 ```
 
 == Return Value ==
-^Returns an OR'd combination of the modifier keys for the selected keyboard. See [[SDLMod]] for details.^  ???
+^Returns an OR'd combination of the modifier keys for the keyboard. See [[SDLMod]] for details.^  ???
 
 == Code Examples ==
 ```c++
