update content - changeset 4465

--- a/SDL_GetMouseState.mediawiki
+++ b/SDL_GetMouseState.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_GetMouseState =
-Use this function to retrieve the current state of the specified mouse.
+Use this function to retrieve the current state of the mouse.
 
 
 == Syntax ==
@@ -15,10 +15,10 @@ Uint8 SDL_GetMouseState(int* x,
 == Function Parameters ==
 {|
 |'''x'''
-|the x coordinate of the mouse cursor position
+|^the x coordinate of the mouse cursor position relative to the focus window^
 |-
 |'''y'''
-|the y coordinate of the mouse cursor position
+|^the y coordinate of the mouse cursor position relative to the focus window^
 |}
 
 == Return Value ==
@@ -30,9 +30,12 @@ You can add your code example here
 ```
 
 == Remarks ==
-The current button state is returned as a button bitmask, which can be tested using the SDL_BUTTON(X) macros, and '''x''' and '''y''' are set to the mouse cursor position relative to the focus window for the currently selected mouse. You can pass NULL for either '''x''' or '''y'''. 
+The current button state is returned as a button bitmask, which can be tested using the SDL_BUTTON(X) macros, and '''x''' and '''y''' are set to the mouse cursor position relative to the focus window for the current,,ly selected,, mouse. You can pass NULL for either '''x''' or '''y'''. 
+
+<<Color2(green,Should the first sentence be split into two?  Should the subscripted portion be removed to reflect the lack of multi-mouse support?)>>
 
 == Related Functions ==
-:[[SDL_GetRelativeMouseState]]??? ''because it does essentially the same thing differently''
+:[[SDL_GetRelativeMouseState]] ??? 
+
 ----
 [[CategoryAPI]], [[CategoryMouse]]
