update content - changeset 4465

--- a/SDL_GetRelativeMouseState.mediawiki
+++ b/SDL_GetRelativeMouseState.mediawiki
@@ -3,26 +3,22 @@
 '''DRAFT'''
 
 = SDL_GetRelativeMouseState =
-Use this function to retrieve the state of the specified mouse.
+Use this function to retrieve the current state of the mouse.
 
 
 == Syntax ==
 ```c++
-Uint8 SDL_GetRelativeMouseState(int  index,
-                                int* x,
+Uint8 SDL_GetRelativeMouseState(int* x,
                                 int* y)
 ```
 
 == Function Parameters ==
 {|
-|'''index'''
-|the index of the specified mouse
-|-
 |'''x'''
-|a pointer filled with the relative x coordinate of the mouse
+|^a pointer filled with the last recorded x coordinate of the mouse^
 |-
 |'''y'''
-|a pointer filled with the relative y coordinate of the mouse
+|^a pointer filled with the last recorded y coordinate of the mouse^
 |}
 
 == Return Value ==
@@ -37,7 +33,7 @@ You can add your code example here
 The current button state is returned as a button bitmask, which can be tested using the SDL_BUTTON(X) macros, and '''x''' and '''y''' are set to the mouse deltas since the last call to [[SDL_GetRelativeMouseState]]().
 
 == Related Functions ==
-:[[SDL_GetMouseState]] ??? ''Because it's essentially the same a different way''
+:[[SDL_GetMouseState]] ???
 
 ----
 [[CategoryAPI]], [[CategoryMouse]]
