update content - changeset 4465

--- a/SDL_GetRelativeMouseState.mediawiki
+++ b/SDL_GetRelativeMouseState.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_GetRelativeMouseState =
-Use this function to retrieve the current state of the mouse.
+Use this function to retrieve the relative state of the mouse.
 
 
 == Syntax ==
