--- a/SDL_CreateCursor.mediawiki
+++ b/SDL_CreateCursor.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_CreateCursor =
-Use this function to create a cursor ^?for the currently selected mouse,?^ using the specified bitmap data and mask (in MSB format).
+Use this function to create a cursor using the specified bitmap data and mask (in MSB format).
 
 
 == Syntax ==
