--- a/CategoryEnum.mediawiki
+++ b/CategoryEnum.mediawiki
@@ -6,6 +6,13 @@
 
 = SDL 1.3 API Enumerations =
 
+
+== Introduction ==
+
+This category contains all the (public) enumerations for SDL.
+
+== Enumerations ==
+
 <<FullSearch(category:CategoryEnum)>>
 
 ----
