--- a/CategoryStruct.mediawiki
+++ b/CategoryStruct.mediawiki
@@ -5,6 +5,13 @@
 
 = SDL 1.3 API Structures =
 
+
+== Introduction ==
+
+This category contains all the (public) structures for SDL.
+
+== Structures ==
+
 <<FullSearch(category:CategoryStruct)>>
 
 ----
