--- a/CategoryMouse.mediawiki
+++ b/CategoryMouse.mediawiki
@@ -13,6 +13,8 @@
 
 == Introduction ==
 
+This category contains functions for handling inputs from mice and other similar pointing devices, as well as some cursor management tasks.
+
 Please note that this ONLY discusses "mice" with the notion of the desktop GUI. You (usually) have one system cursor, and the OS hides the hardware details from you. If you plug in 10 mice, all ten move that one cursor. For many applications and games this is perfect, and this API has served hundreds of SDL programs well since its birth.
 
 It's not the whole picture, though. If you want more lowlevel control, SDL offers a different API that gives you visibility into each input device, multi-touch interfaces, etc. 
