--- a/CategoryJoystick.mediawiki
+++ b/CategoryJoystick.mediawiki
@@ -11,6 +11,8 @@
 
 == Introduction ==
 
+This category contains functions for handling inputs from joysticks.
+
 == Functions ==
 
 <<FullSearch(category:CategoryJoystick)>>
