--- a/CategoryIO.mediawiki
+++ b/CategoryIO.mediawiki
@@ -10,7 +10,7 @@
 
 
 == Introduction ==
-This file provides a general interface for SDL to read and write data sources.  It can easily be extended to files, memory, etc.
+^This category contains functions for handling^ ,,This file provides a,, ^the^ general interface for SDL to read and write data sources.  It can easily be extended to files, memory, etc.
 
 == Functions ==
 
