--- a/Tutorials-TextInput.mediawiki
+++ b/Tutorials-TextInput.mediawiki
@@ -18,15 +18,15 @@ It would not be feasible to have a keyboard with over ten-thousand keys, would i
 * <span id="CandidateList"></span>'''Candidate List''' - A list of Candidates, used when there is any ambiguity.
 
 == Basic Workflow ==
- 1. The user activates an input method. This is typically done via a hotkey or by selecting an input method in a GUI.
+ 1. The user activates an input method ([[#IME|IME]]). This is typically done via a hotkey or by selecting an input method in a GUI.
  1. The user begins to type in their selected language, starting a [[#Composition|Composition]].
  1. The [[#IME|IME]] intercepts the key press events and interprets them.
- 1. The user determines the composition is satisfactory and commits it (usually with the enter key). The user may instead choose to open the [[#CandidateList|Candidate List]] and select a [[#Candidate|Candidate]].
- 1. The [[#IME|IME]] passes on the text that has been generated.
+ 1. The user determines the composition is satisfactory and commits it (usually with the enter key). Alternatively, the user may choose to open the [[#CandidateList|Candidate List]] and select a [[#Candidate|Candidate]].
+ 1. The [[#IME|IME]] passes on the committed text to the application.
 
 While this provides a good overview, it may not be accurate for all platforms.
 
-Whenever the [[#Composition|Composition]] is changed, the application can retrieve it.
+There are multiple input method styles which you can read about [http://www.mozilla.org/projects/intl/input-method-spec.html here]. SDL supports "on-the-spot" mode. This has an important implication: the application is responsible for drawing the composition.
 
 == SDL ==
 So how does SDL handle text input?
@@ -39,3 +39,5 @@ So how does SDL handle text input?
 === Events ===
 * [[SDL_TextEditingEvent]]
 * [[SDL_TextInputEvent]]
+
+One important thing to notice is that the application can enable and disable text input arbitrarily with [[SDL_StartTextInput]] and [[SDL_StopTextInput]]. [[SDL_SetTextInputRect]] controls where the [[#CandidateList|Candidate List]] will open, if supported.
