--- a/SDL_OpenAudio.mediawiki
+++ b/SDL_OpenAudio.mediawiki
@@ -67,14 +67,14 @@ SDL_PauseAudio(0);
 ```
 
 == Remarks ==
-<span id="desired"></span> To open the audio device a desired [[SDL_AudioSpec]] must be created. 
+<span id="desired"></span> To open the audio device a '''desired''' [[SDL_AudioSpec]] must be created. 
 ```c++
 SDL_AudioSpec *desired;
 .
 .
 desired = malloc(sizeof(SDL_AudioSpec));
 ```
-When filling in the desired audio spec structure, 
+When filling in the '''desired''' audio spec structure, 
 *desired->''freq'' should be the desired audio frequency in samples-per-second
 *desired->''format'' should be the desired audio format
 *desired->''samples'' is the desired size of the audio buffer, in samples.  This number should be a power of two, and may be adjusted by the audio driver to a value more suitable for the hardware.  Good values seem to range between 512 and 8096 inclusive, depending on the application and CPU speed.  Smaller values yield faster response time, but can lead to underflow if the application is doing heavy processing and cannot fill the audio buffer in time.  A stereo sample consists of both right and left channels in LR ordering.
