--- a/SDL_PauseAudio.mediawiki
+++ b/SDL_PauseAudio.mediawiki
@@ -1,5 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+'''DRAFT'''
 
 = SDL_PauseAudio =
 Use this function to pause and unpause audio playback.
