add 'draft' note

--- a/SDL_Color.mediawiki
+++ b/SDL_Color.mediawiki
@@ -1,5 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+'''DRAFT'''
 
 = SDL_Color =
 A structure that contains color information.
