--- a/SDL_Palette.mediawiki
+++ b/SDL_Palette.mediawiki
@@ -1,5 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+'''DRAFT'''
 
 = SDL_Palette =
 A structure that contains palette information.
