--- a/SDL_MapRGB.mediawiki
+++ b/SDL_MapRGB.mediawiki
@@ -1,5 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
+'''DRAFT'''
 
 = SDL_MapRGB =
 Use this function to map an RGB triple to an opaque pixel value for a given pixel format.
