--- a/Tutorials-TextInput.mediawiki
+++ b/Tutorials-TextInput.mediawiki
@@ -17,41 +17,32 @@ It would not be feasible to have a keyboard with over ten-thousand keys, would i
 * <span id="Candidate"></span>'''Candidate''' - An optional alternative text for the composition, gathered by the IME in the Candidate List.
 * <span id="CandidateList"></span>'''Candidate List''' - A list of Candidates, used when there is any ambiguity.
 
-== Basic Workflow ==
+== Workflow ==
 {|
-|<tablewidth="400px"> 
-|Description
-|Example
-|}
-
-{|
-|<tablewidth="400px">1
-| 
-| {{attachment:TextInput1.png|TextInput1|width=100}} 
+|<style="width: 10%">Step
+|<style="width: 60%">Description
+|<style="width: 30%">Example
+|-
+|1
+|The user activates an input method ([[#IME|IME]]). This is typically done via a hotkey or by selecting an input method in a GUI.
+|<style="text-align: right;">[[attachment:TextInput1.png|{{attachment:TextInput1.png|TextInput1|width=150}}|target="_blank"]]
 |-
 |2
-| 
-| {{attachment:TextInput2.png|TextInput2|width=100}} 
+|The user begins to type in their selected language, starting a [[#Composition|Composition]].
+|<style="text-align: right;">[[attachment:TextInput2.png|{{attachment:TextInput2.png|TextInput2|width=150}}|target="_blank"]]
 |-
 |3
-| 
-| {{attachment:TextInput3.png|TextInput3|width=100}} 
+|The user continued typing until the composition is satisfactory.
+|<style="text-align: right;">[[attachment:TextInput3.png|{{attachment:TextInput3.png|TextInput3|width=150}}|target="_blank"]]
 |-
 |4
-| 
-| {{attachment:TextInput4.png|TextInput4|width=100}} 
+|Alternatively, the user may choose to open the [[#CandidateList|Candidate List]] and select a [[#Candidate|Candidate]].
+|<style="text-align: right;">[[attachment:TextInput4.png|{{attachment:TextInput4.png|TextInput4|width=150}}|target="_blank"]]
 |-
 |5
-| 
-| {{attachment:TextInput5.png|TextInput5|width=100}} 
+|The user commits the [[#Composition|Composition]], terminating it. The [[#IME|IME]] passes the text onto the application.
+|<style="text-align: right;">[[attachment:TextInput5.png|{{attachment:TextInput5.png|TextInput5|width=150}}|target="_blank"]]
 |}
-
-
- 1. The user activates an input method ([[#IME|IME]]). This is typically done via a hotkey or by selecting an input method in a GUI. {{attachment:TextInput1.png|TextInput1|width="100"}}
- 1. The user begins to type in their selected language, starting a [[#Composition|Composition]]. {{attachment:TextInput2.png|TextInput1|align="right"}}
- 1. The [[#IME|IME]] intercepts the key press events and interprets them.
- 1. The user determines the composition is satisfactory and commits it (usually with the enter key). Alternatively, the user may choose to open the [[#CandidateList|Candidate List]] and select a [[#Candidate|Candidate]]. {{attachment:TextInput3.png|TextInput1|align="right"}}
- 1. The [[#IME|IME]] passes on the committed text to the application.
 
 While this provides a good overview, it may not be accurate for all platforms.
 
