--- a/SDL_RWFromFP.mediawiki
+++ b/SDL_RWFromFP.mediawiki
@@ -8,7 +8,11 @@ Use this function to create an SDL_RWops structure from a standard I/O file poin
 
 == Syntax ==
 ```c++
+#ifdef HAVE_STDIO_H
 SDL_RWops* SDL_RWFromFP(FILE*    fp,
+                        SDL_bool autoclose)
+#else
+SDL_RWops* SDL_RWFromFP(void*    fp,
                         SDL_bool autoclose)
 ```
 
@@ -22,7 +26,7 @@ SDL_RWops* SDL_RWFromFP(FILE*    fp,
 |}
 
 == Return Value ==
-*Returns a pointer to a new RWops structure, or NULL if it fails. *
+*<br/>Returns a pointer to a new RWops structure, or NULL if it fails. <br/>*
 
 == Code Examples ==
 ```c++
@@ -38,13 +42,13 @@ SDL_RWclose(rw); // Automatically does an fclose(fp)
 ```
 
 == Remarks ==
-*This is not available under Win32, since files opened in an application on that platform cannot be used by a dynamically linked library.*
+*<br/>This is not available under Win32, since files opened in an application on that platform cannot be used by a dynamically linked library.<br/>*
 
 == Related Functions ==
 :[[SDL_RWclose]] (Macro) ???
 :[[SDL_RWFromConstMem]] ???
-:[[SDL_RWFromFile]] *???
-:[[SDL_RWFromMem]] *???
+:[[SDL_RWFromFile]] *
+:[[SDL_RWFromMem]] *
 
 ----
 [[CategoryAPI]], [[CategoryIO]]
